Thu Nov 25 10:03:14 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/win32ole/test_err_in_callback.rb (teardown): remove tmp file
	  only when it exists.

Thu Nov 25 01:38:25 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/big5-hkscs-tbl.rb: Update table as HKSCS-2008.
	  patched by oCameLo oTnTh [ruby-core:33256]

	* enc/big5.c: add alias Big5-HKSCS:2008 to Big5-HKSCS.

Wed Nov 24 15:18:07 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vsnprintf (BSD_vfprintf): use QUADINT macro only when _HAVE_SANE_QUAD_
	  macro is defined.

Wed Nov 24 12:47:16 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vsnprintf (BSD_vfprintf): added VC++ compatible size specifications
	  (I, I32, I64).

Wed Nov 24 11:19:13 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): treat UTF-16 and UTF-32 as BE or LE.

Wed Nov 24 06:35:32 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf_16_32.trans: add the UTF-32 converter.

Wed Nov 24 05:40:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>

Wed Nov 24 06:13:32 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (filecp, wstr_to_mbstr, mbstr_to_wstr):
	  refactored.

Wed Nov 24 05:40:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf_16_32.trans: add a converter from UTF-8 to UTF-16.

Wed Nov 24 03:21:35 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf_16_32.trans: raise error on unpaired upper
	  surrogates.

Wed Nov 24 01:40:23 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/utf_16_32.h: add UTF-16 and UTF-32 as a dummy encoding.

	* enc/trans/utf_16_32.trans: add a converter from UTF-16 to UTF-8.

Tue Nov 23 21:59:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (wlink, rb_w32_getppid): use typedef instead of
	  repeating compilcated function prototypes.

Tue Nov 23 18:54:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): should mark self in conrol
	  frames.  [ruby-core:33289]
